--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="word-grid"></div>
         <div id="keyboard"></div>
         <p id="message"></p>
+        <button id="check-button">تحقق</button>
     </div>
     <script src="script.js"></script>
 </body>
