--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         <p id="message"></p>
         <button id="check-button">تحقق</button>
     </div>
+
+    <!-- شاشة الفوز/الخسارة -->
+    <div id="result-screen" class="hidden">
+        <h2 id="result-message"></h2>
+        <button id="next-button">التالي</button>
+        <button id="home-button">العودة للصفحة الرئيسية</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
